# integration-showcase

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  otel-collector-config.yaml  pyproject.toml
.claude/: settings.json
.claude/hooks/: deny-bare-runner.sh  gate-commit.sh  gate-push.sh  ruff-format.sh  session-init.sh
.claude/skills/fix-pr/: SKILL.md
.claude/skills/pr/: SKILL.md
.claude/skills/review-pr/: SKILL.md
.github/workflows/: ci.yml
docs/: README.md  konzept.md
docs/explanation/: warum-business-tx-id-nicht-in-metrik-labels.md  warum-envelope-statt-raw-payload.md
docs/guides-python/: blob-zugriff-in-python.md  envelope-als-pydantic-modell.md  otel-python-instrumentierung.md  temporal-python-patterns.md
docs/guides/blob/: blob-metadaten-stempeln.md  payload-lesen-und-verifizieren.md  payload-schreiben.md
docs/guides/otel/: baggage-zu-span-attributen.md  logs-mit-traces-korrelieren.md  trace-kontext-im-envelope.md  workflow-span-attribute.md
docs/guides/temporal/: aktivitaet-implementieren.md  kompensation-verdrahten.md  retry-policy-waehlen.md  task-queue-pro-service.md  workflow-mit-envelope-starten.md
docs/reference/: envelope-felder.md  fehlertaxonomie.md  korrelationsattribute.md  regeln.md
scenarios/: __init__.py  _common.py  _demo.py  demo_happy.py  demo_shipment_failure.py  demo_unhappy.py  run_happy.py  run_shipment_failure.py  run_unhappy.py  stack.py
sdd/: BACKLOG-DONE.md  BACKLOG.md  CLAUDE-REFERENCE.md  DESIGN.md  TESTING.md
sdd/research/: research-temporal-azure-otel-orchestration.md
src/integration_showcase/: __init__.py
src/integration_showcase/service_a/: __init__.py  app.py
src/integration_showcase/service_b/: __init__.py  activities.py  worker.py
src/integration_showcase/service_c/: __init__.py  activities.py  worker.py
src/integration_showcase/service_d/: __init__.py  activities.py  worker.py
src/integration_showcase/shared/: __init__.py  blob.py  constants.py  db.py  envelope.py  log_setup.py  otel.py
src/integration_showcase/workflow/: envelopes.py  order.py  worker.py
tests/: conftest.py
tests/integration/: conftest.py  test_blob.py  test_workflow_routing.py  test_workflow_span_attrs.py
tests/unit/: test_blob.py  test_envelope.py  test_logging.py  test_otel.py  test_scenarios_common.py  test_scenarios_main.py  test_service_a.py  test_service_b.py  test_service_c.py  test_service_d.py  test_workflow_routing.py
