[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "integration-showcase"
version = "0.1.0"
description = "Temporal + Azure Blob (remote-store) + OpenTelemetry distributed saga showcase"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "Harald Alferi" },
]

dependencies = [
  "remote-store[azure]>=0.23.0",
  "temporalio>=1.7.0",
  "opentelemetry-api>=1.28.0",
  "opentelemetry-sdk>=1.28.0",
  "opentelemetry-exporter-otlp>=1.28.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
]

[project.urls]
Repository = "https://github.com/haalfi/integration-showcase"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "httpx>=0.27.0",
]

[tool.hatch.envs.default]
installer = "uv"
features = ["dev"]

[tool.hatch.envs.default.scripts]
lint = "ruff check src/ tests/ scenarios/"
format = "ruff format src/ tests/ scenarios/"
format-check = "ruff format --check src/ tests/ scenarios/"
typecheck = "mypy src/"
test = "pytest"
test-cov = "pytest --cov=integration_showcase --cov-report=term-missing --cov-fail-under=80"
all = ["lint", "format-check", "test-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/integration_showcase"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
  "integration: mark test as requiring Docker services (docker compose up -d)",
]

[tool.coverage.run]
source = ["integration_showcase"]
omit = [
  "*/service_a/app.py",
  "*/service_b/worker.py",
  "*/service_c/worker.py",
  "*/service_d/worker.py",
  "*/workflow/order.py",
  "*/workflow/worker.py",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
