[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "integration-showcase"
version = "0.1.0"
description = "Temporal + Azure Blob (remote-store) + OpenTelemetry distributed saga showcase"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "Harald Alferi" },
]

dependencies = [
  "remote-store[azure,otel]>=0.24.0",
  "temporalio>=1.7.0,<2",
  "opentelemetry-api>=1.28.0",
  "opentelemetry-sdk>=1.28.0",
  "opentelemetry-exporter-otlp>=1.28.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
]

[project.urls]
Repository = "https://github.com/haalfi/integration-showcase"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "httpx>=0.27.0",
]

[tool.hatch.envs.default]
installer = "uv"
features = ["dev"]

[tool.hatch.envs.default.scripts]
lint = "ruff check src/ tests/ scenarios/"
format = "ruff format src/ tests/ scenarios/"
format-check = "ruff format --check src/ tests/ scenarios/"
typecheck = "mypy src/"
test = "pytest"
test-cov = "pytest --cov=integration_showcase --cov=scenarios --cov-report=term-missing --cov-fail-under=80"
all = ["lint", "format-check", "test-cov"]
demo-happy = "python -m scenarios.demo_happy"
demo-unhappy = "python -m scenarios.demo_unhappy"
demo-shipment-failure = "python -m scenarios.demo_shipment_failure"
stack = "python -m scenarios.stack"
scenario-happy = "python -m scenarios.run_happy"
scenario-unhappy = "python -m scenarios.run_unhappy"
scenario-shipment-failure = "python -m scenarios.run_shipment_failure"

[tool.hatch.build.targets.wheel]
packages = ["src/integration_showcase"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Make the project root importable so `tests/` can import the top-level
# `scenarios` package without relying on the invocation cwd.
pythonpath = ["."]
addopts = "-m 'not integration'"
markers = [
  "integration: mark test as requiring Docker services (docker compose up -d)",
]

[tool.coverage.run]
source = ["integration_showcase", "scenarios"]
omit = [
  "*/service_a/app.py",
  "*/service_b/worker.py",
  "*/service_c/worker.py",
  "*/service_d/worker.py",
  "*/workflow/order.py",
  "*/workflow/worker.py",
  # Thin argparse + asyncio.run shells; the assertion logic lives in main()
  # and is covered via tests/unit/test_scenarios_main.py.
  "scenarios/__init__.py",
  # Demo runners: thin subprocess orchestration shells with no assertion logic.
  "scenarios/_demo.py",
  "scenarios/demo_happy.py",
  "scenarios/demo_unhappy.py",
  "scenarios/demo_shipment_failure.py",
  "scenarios/stack.py",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
